// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stylesheet Animations - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"@-webkit-keyframes Xxm1J {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@keyframes Xxm1J {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@-webkit-keyframes Yuc9Q {
    from {
        color: rgba(255,255,255,0);
        -webkit-transform: scale(1);
                transform: scale(1)
    }
    25% {
        -webkit-transform: scale(2, 3);
                transform: scale(2, 3)
    }
    50% {
        -webkit-transform: scale(5, 5);
                transform: scale(5, 5)
    }
    75% {
        -webkit-transform: scale(4, 0.5);
                transform: scale(4, 0.5)
    }
    to {
        -webkit-transform: scale(1);
                transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@keyframes Yuc9Q {
    from {
        color: rgba(255,255,255,0);
        -webkit-transform: scale(1);
                transform: scale(1)
    }
    25% {
        -webkit-transform: scale(2, 3);
                transform: scale(2, 3)
    }
    50% {
        -webkit-transform: scale(5, 5);
                transform: scale(5, 5)
    }
    75% {
        -webkit-transform: scale(4, 0.5);
                transform: scale(4, 0.5)
    }
    to {
        -webkit-transform: scale(1);
                transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@-webkit-keyframes ULbBx {
    from {
        -webkit-transform: rotate(0deg);
                transform: rotate(0deg)
    }
    to {
        -webkit-transform: rotate(359deg);
                transform: rotate(359deg)
    }
}
@keyframes ULbBx {
    from {
        -webkit-transform: rotate(0deg);
                transform: rotate(0deg)
    }
    to {
        -webkit-transform: rotate(359deg);
                transform: rotate(359deg)
    }
}
._1aUDE {
    margin-left: 300px;
    display: -webkit-flex;
    display: flex;
    -webkit-justify-content: center;
            justify-content: center;
    -webkit-align-items: center;
            align-items: center;
    height: 200px;
    width: 200px;
    background-color: yellow;
    color: rgba(255,255,255,0);
    -webkit-animation-timing-function: linear;
            animation-timing-function: linear;
    -webkit-animation-duration: 3s;
            animation-duration: 3s;
    -webkit-animation-fill-mode: both;
            animation-fill-mode: both;
    -webkit-animation-name: Xxm1J;
            animation-name: Xxm1J
}
@media (min-width: 700px) {
    ._1aUDE:hover {
        -webkit-animation: Yuc9Q 1.5s ease-out forwards;
                animation: Yuc9Q 1.5s ease-out forwards
    }
}
@media (max-width: 699px) {
    ._1aUDE {
        -webkit-animation-timing-function: linear;
                animation-timing-function: linear;
        -webkit-animation-duration: 1.5s;
                animation-duration: 1.5s;
        -webkit-animation-iteration-count: infinite;
                animation-iteration-count: infinite;
        -webkit-animation-name: ULbBx;
                animation-name: ULbBx
    }
}
@-webkit-keyframes _0Mv05 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
@keyframes _0Mv05 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
.tjufO_3XPt {
    height: 200px;
    width: 200px
}
._1aUDE ~ .tjufO_3XPt {
    -webkit-animation-timing-function: linear;
            animation-timing-function: linear;
    -webkit-animation-duration: 1s;
            animation-duration: 1s;
    -webkit-animation-direction: alternate;
            animation-direction: alternate;
    -webkit-animation-fill-mode: both;
            animation-fill-mode: both;
    -webkit-animation-iteration-count: infinite;
            animation-iteration-count: infinite;
    -webkit-animation-name: _0Mv05;
            animation-name: _0Mv05
}
@-webkit-keyframes _3W3VQ {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
@keyframes _3W3VQ {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
.tjufO_6Iw9 {
    height: 200px;
    width: 200px
}
._1aUDE ~ .tjufO_6Iw9 {
    -webkit-animation-timing-function: linear;
            animation-timing-function: linear;
    -webkit-animation-duration: 3s;
            animation-duration: 3s;
    -webkit-animation-direction: alternate;
            animation-direction: alternate;
    -webkit-animation-fill-mode: both;
            animation-fill-mode: both;
    -webkit-animation-iteration-count: infinite;
            animation-iteration-count: infinite;
    -webkit-animation-name: _3W3VQ;
            animation-name: _3W3VQ
}
"
`;

exports[`Stylesheet Animations - Custom idents - should create a deterministic stylesheet 1`] = `
"@keyframes Xxm1J {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@keyframes Yuc9Q {
    from {
        color: rgba(255,255,255,0);
        transform: scale(1)
    }
    25% {
        transform: scale(2, 3)
    }
    50% {
        transform: scale(5, 5)
    }
    75% {
        transform: scale(4, 0.5)
    }
    to {
        transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@keyframes ULbBx {
    from {
        transform: rotate(0deg)
    }
    to {
        transform: rotate(359deg)
    }
}
.animations-unthemedAnimation_1aUDE {
    margin-left: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 200px;
    width: 200px;
    background-color: yellow;
    color: rgba(255,255,255,0);
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-fill-mode: both;
    animation-name: Xxm1J
}
@media (min-width: 700px) {
    .animations-unthemedAnimation_1aUDE:hover {
        animation: Yuc9Q 1.5s ease-out forwards
    }
}
@media (max-width: 699px) {
    .animations-unthemedAnimation_1aUDE {
        animation-timing-function: linear;
        animation-duration: 1.5s;
        animation-iteration-count: infinite;
        animation-name: ULbBx
    }
}
@keyframes _0Mv05 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
.animations-themedAnimation_tjufO-fastTheme_3X {
    height: 200px;
    width: 200px
}
.animations-unthemedAnimation_1aUDE ~ .animations-themedAnimation_tjufO-fastTheme_3X {
    animation-timing-function: linear;
    animation-duration: 1s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _0Mv05
}
@keyframes _3W3VQ {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
.animations-themedAnimation_tjufO-slowTheme_6I {
    height: 200px;
    width: 200px
}
.animations-unthemedAnimation_1aUDE ~ .animations-themedAnimation_tjufO-slowTheme_6I {
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _3W3VQ
}
"
`;

exports[`Stylesheet Animations - Development mode - should create a deterministic stylesheet 1`] = `
"@keyframes Xxm1J {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@keyframes Yuc9Q {
    from {
        color: rgba(255,255,255,0);
        transform: scale(1)
    }
    25% {
        transform: scale(2, 3)
    }
    50% {
        transform: scale(5, 5)
    }
    75% {
        transform: scale(4, 0.5)
    }
    to {
        transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@keyframes ULbBx {
    from {
        transform: rotate(0deg)
    }
    to {
        transform: rotate(359deg)
    }
}
.animations-unthemedAnimation_1aUDE {
    margin-left: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 200px;
    width: 200px;
    background-color: yellow;
    color: rgba(255,255,255,0);
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-fill-mode: both;
    animation-name: Xxm1J
}
@media (min-width: 700px) {
    .animations-unthemedAnimation_1aUDE:hover {
        animation: Yuc9Q 1.5s ease-out forwards
    }
}
@media (max-width: 699px) {
    .animations-unthemedAnimation_1aUDE {
        animation-timing-function: linear;
        animation-duration: 1.5s;
        animation-iteration-count: infinite;
        animation-name: ULbBx
    }
}
@keyframes _3W3VQ {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
.animations-themedAnimation_tjufO_animations-slowTheme_6Iw9 {
    height: 200px;
    width: 200px
}
.animations-unthemedAnimation_1aUDE ~ .animations-themedAnimation_tjufO_animations-slowTheme_6Iw9 {
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _3W3VQ
}
@keyframes _0Mv05 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
.animations-themedAnimation_tjufO_animations-fastTheme_3XPt {
    height: 200px;
    width: 200px
}
.animations-unthemedAnimation_1aUDE ~ .animations-themedAnimation_tjufO_animations-fastTheme_3XPt {
    animation-timing-function: linear;
    animation-duration: 1s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _0Mv05
}
"
`;

exports[`Stylesheet Animations - Production mode - should create a deterministic stylesheet 1`] = `
"@keyframes Xxm1J{0%{opacity:0}to{opacity:1}}@keyframes Yuc9Q{0%{color:hsla(0,0%,100%,0);transform:scale(1)}25%{transform:scale(2,3)}50%{transform:scale(5)}75%{transform:scale(4,.5)}to{transform:scale(1);color:#fff}}@keyframes ULbBx{0%{transform:rotate(0deg)}to{transform:rotate(359deg)}}._1aUDE{margin-left:300px;display:flex;justify-content:center;align-items:center;height:200px;width:200px;background-color:#ff0;color:hsla(0,0%,100%,0);animation-timing-function:linear;animation-duration:3s;animation-fill-mode:both;animation-name:Xxm1J}@media (min-width:700px){._1aUDE:hover{animation:Yuc9Q 1.5s ease-out forwards}}@media (max-width:699px){._1aUDE{animation-timing-function:linear;animation-duration:1.5s;animation-iteration-count:infinite;animation-name:ULbBx}}
@keyframes _0Mv05{0%{background-color:#fff}to{background-color:red}}.tjufO_3XPt{height:200px;width:200px}._1aUDE~.tjufO_3XPt{animation-timing-function:linear;animation-duration:1s;animation-direction:alternate;animation-fill-mode:both;animation-iteration-count:infinite;animation-name:_0Mv05}
@keyframes _3W3VQ{0%{background-color:#fff}to{background-color:#00f}}.tjufO_6Iw9{height:200px;width:200px}._1aUDE~.tjufO_6Iw9{animation-timing-function:linear;animation-duration:3s;animation-direction:alternate;animation-fill-mode:both;animation-iteration-count:infinite;animation-name:_3W3VQ}
"
`;

exports[`Stylesheet Animations - Theme function ident - should create a deterministic stylesheet 1`] = `
"@keyframes Xxm1J {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@keyframes Yuc9Q {
    from {
        color: rgba(255,255,255,0);
        transform: scale(1)
    }
    25% {
        transform: scale(2, 3)
    }
    50% {
        transform: scale(5, 5)
    }
    75% {
        transform: scale(4, 0.5)
    }
    to {
        transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@keyframes ULbBx {
    from {
        transform: rotate(0deg)
    }
    to {
        transform: rotate(359deg)
    }
}
._1aUDE {
    margin-left: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 200px;
    width: 200px;
    background-color: yellow;
    color: rgba(255,255,255,0);
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-fill-mode: both;
    animation-name: Xxm1J
}
@media (min-width: 700px) {
    ._1aUDE:hover {
        animation: Yuc9Q 1.5s ease-out forwards
    }
}
@media (max-width: 699px) {
    ._1aUDE {
        animation-timing-function: linear;
        animation-duration: 1.5s;
        animation-iteration-count: infinite;
        animation-name: ULbBx
    }
}
@keyframes _0Mv05 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
.tjufO_fast_3X {
    height: 200px;
    width: 200px
}
._1aUDE ~ .tjufO_fast_3X {
    animation-timing-function: linear;
    animation-duration: 1s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _0Mv05
}
@keyframes _3W3VQ {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
.tjufO_slow_6I {
    height: 200px;
    width: 200px
}
._1aUDE ~ .tjufO_slow_6I {
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _3W3VQ
}
"
`;

exports[`Stylesheet Complex selectors - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
".bZ2kF:focus {
    color: purple
}
._2t1sd .bZ2kF {
    background-color: red
}
._3dbtz_p20 .bZ2kF, ._3dbtz_1lKd .bZ2kF {
    background-color: blue
}
._3dbtz_p20 ._2t1sd .bZ2kF, ._3dbtz_1lKd ._2t1sd .bZ2kF {
    background-color: black
}
html .bZ2kF {
    position: absolute
}
@media screen and (min-width: 300px) {
    .bZ2kF {
        color: green
    }
    ._2t1sd .bZ2kF {
        color: red
    }
    ._3dbtz_p20 .bZ2kF, ._3dbtz_1lKd .bZ2kF {
        color: blue
    }
    ._3dbtz_p20 ._2t1sd .bZ2kF, ._3dbtz_1lKd ._2t1sd .bZ2kF {
        color: black
    }
}
@media screen and (min-width: 700px) {
    html .bZ2kF {
        position: relative
    }
}
._1-2GZ_p20:focus {
    color: purple
}
._2t1sd ._1-2GZ_p20 {
    background-color: red
}
._3dbtz_p20 ._1-2GZ_p20 {
    background-color: blue
}
._3dbtz_p20 ._2t1sd ._1-2GZ_p20 {
    background-color: black
}
html ._1-2GZ_p20 {
    position: absolute
}
@media screen and (min-width: 700px) {
    ._1-2GZ_p20 {
        color: green
    }
    ._2t1sd ._1-2GZ_p20 {
        color: red
    }
    ._3dbtz_p20 ._1-2GZ_p20 {
        color: blue
    }
    ._3dbtz_p20 ._2t1sd ._1-2GZ_p20 {
        color: black
    }
}
@media screen and (min-width: 701px) {
    html ._1-2GZ_p20 {
        position: relative
    }
}
._1-2GZ_1lKd:focus {
    color: purple
}
._2t1sd ._1-2GZ_1lKd {
    background-color: red
}
._3dbtz_1lKd ._1-2GZ_1lKd {
    background-color: blue
}
._3dbtz_1lKd ._2t1sd ._1-2GZ_1lKd {
    background-color: black
}
html ._1-2GZ_1lKd {
    position: absolute
}
@media screen and (min-width: 1000px) {
    ._1-2GZ_1lKd {
        color: green
    }
    ._2t1sd ._1-2GZ_1lKd {
        color: red
    }
    ._3dbtz_1lKd ._1-2GZ_1lKd {
        color: blue
    }
    ._3dbtz_1lKd ._2t1sd ._1-2GZ_1lKd {
        color: black
    }
}
@media screen and (min-width: 1001px) {
    html ._1-2GZ_1lKd {
        position: relative
    }
}
"
`;

exports[`Stylesheet Complex selectors - Custom idents - should create a deterministic stylesheet 1`] = `
".complexSelectors-styles_blue_bZ2kF:focus {
    color: purple
}
.complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-styles_blue_bZ2kF {
    background-color: red
}
.complexSelectors-themedStyle_3dbtz-big__p .complexSelectors-styles_blue_bZ2kF, .complexSelectors-themedStyle_3dbtz-small_1l .complexSelectors-styles_blue_bZ2kF {
    background-color: blue
}
.complexSelectors-themedStyle_3dbtz-big__p .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-styles_blue_bZ2kF, .complexSelectors-themedStyle_3dbtz-small_1l .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-styles_blue_bZ2kF {
    background-color: black
}
html .complexSelectors-styles_blue_bZ2kF {
    position: absolute
}
@media screen and (min-width: 300px) {
    .complexSelectors-styles_blue_bZ2kF {
        color: green
    }
    .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-styles_blue_bZ2kF {
        color: red
    }
    .complexSelectors-themedStyle_3dbtz-big__p .complexSelectors-styles_blue_bZ2kF, .complexSelectors-themedStyle_3dbtz-small_1l .complexSelectors-styles_blue_bZ2kF {
        color: blue
    }
    .complexSelectors-themedStyle_3dbtz-big__p .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-styles_blue_bZ2kF, .complexSelectors-themedStyle_3dbtz-small_1l .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-styles_blue_bZ2kF {
        color: black
    }
}
@media screen and (min-width: 700px) {
    html .complexSelectors-styles_blue_bZ2kF {
        position: relative
    }
}
.complexSelectors-red_1-2GZ-big__p:focus {
    color: purple
}
.complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ-big__p {
    background-color: red
}
.complexSelectors-themedStyle_3dbtz-big__p .complexSelectors-red_1-2GZ-big__p {
    background-color: blue
}
.complexSelectors-themedStyle_3dbtz-big__p .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ-big__p {
    background-color: black
}
html .complexSelectors-red_1-2GZ-big__p {
    position: absolute
}
@media screen and (min-width: 700px) {
    .complexSelectors-red_1-2GZ-big__p {
        color: green
    }
    .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ-big__p {
        color: red
    }
    .complexSelectors-themedStyle_3dbtz-big__p .complexSelectors-red_1-2GZ-big__p {
        color: blue
    }
    .complexSelectors-themedStyle_3dbtz-big__p .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ-big__p {
        color: black
    }
}
@media screen and (min-width: 701px) {
    html .complexSelectors-red_1-2GZ-big__p {
        position: relative
    }
}
.complexSelectors-red_1-2GZ-small_1l:focus {
    color: purple
}
.complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ-small_1l {
    background-color: red
}
.complexSelectors-themedStyle_3dbtz-small_1l .complexSelectors-red_1-2GZ-small_1l {
    background-color: blue
}
.complexSelectors-themedStyle_3dbtz-small_1l .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ-small_1l {
    background-color: black
}
html .complexSelectors-red_1-2GZ-small_1l {
    position: absolute
}
@media screen and (min-width: 1000px) {
    .complexSelectors-red_1-2GZ-small_1l {
        color: green
    }
    .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ-small_1l {
        color: red
    }
    .complexSelectors-themedStyle_3dbtz-small_1l .complexSelectors-red_1-2GZ-small_1l {
        color: blue
    }
    .complexSelectors-themedStyle_3dbtz-small_1l .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ-small_1l {
        color: black
    }
}
@media screen and (min-width: 1001px) {
    html .complexSelectors-red_1-2GZ-small_1l {
        position: relative
    }
}
"
`;

exports[`Stylesheet Complex selectors - Development mode - should create a deterministic stylesheet 1`] = `
".complexSelectors-styles_blue_bZ2kF:focus {
    color: purple
}
.complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-styles_blue_bZ2kF {
    background-color: red
}
.complexSelectors-themedStyle_3dbtz_complexSelectors-big__p20 .complexSelectors-styles_blue_bZ2kF, .complexSelectors-themedStyle_3dbtz_complexSelectors-small_1lKd .complexSelectors-styles_blue_bZ2kF {
    background-color: blue
}
.complexSelectors-themedStyle_3dbtz_complexSelectors-big__p20 .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-styles_blue_bZ2kF, .complexSelectors-themedStyle_3dbtz_complexSelectors-small_1lKd .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-styles_blue_bZ2kF {
    background-color: black
}
html .complexSelectors-styles_blue_bZ2kF {
    position: absolute
}
@media screen and (min-width: 300px) {
    .complexSelectors-styles_blue_bZ2kF {
        color: green
    }
    .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-styles_blue_bZ2kF {
        color: red
    }
    .complexSelectors-themedStyle_3dbtz_complexSelectors-big__p20 .complexSelectors-styles_blue_bZ2kF, .complexSelectors-themedStyle_3dbtz_complexSelectors-small_1lKd .complexSelectors-styles_blue_bZ2kF {
        color: blue
    }
    .complexSelectors-themedStyle_3dbtz_complexSelectors-big__p20 .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-styles_blue_bZ2kF, .complexSelectors-themedStyle_3dbtz_complexSelectors-small_1lKd .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-styles_blue_bZ2kF {
        color: black
    }
}
@media screen and (min-width: 700px) {
    html .complexSelectors-styles_blue_bZ2kF {
        position: relative
    }
}
.complexSelectors-red_1-2GZ_complexSelectors-big__p20:focus {
    color: purple
}
.complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ_complexSelectors-big__p20 {
    background-color: red
}
.complexSelectors-themedStyle_3dbtz_complexSelectors-big__p20 .complexSelectors-red_1-2GZ_complexSelectors-big__p20 {
    background-color: blue
}
.complexSelectors-themedStyle_3dbtz_complexSelectors-big__p20 .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ_complexSelectors-big__p20 {
    background-color: black
}
html .complexSelectors-red_1-2GZ_complexSelectors-big__p20 {
    position: absolute
}
@media screen and (min-width: 700px) {
    .complexSelectors-red_1-2GZ_complexSelectors-big__p20 {
        color: green
    }
    .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ_complexSelectors-big__p20 {
        color: red
    }
    .complexSelectors-themedStyle_3dbtz_complexSelectors-big__p20 .complexSelectors-red_1-2GZ_complexSelectors-big__p20 {
        color: blue
    }
    .complexSelectors-themedStyle_3dbtz_complexSelectors-big__p20 .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ_complexSelectors-big__p20 {
        color: black
    }
}
@media screen and (min-width: 701px) {
    html .complexSelectors-red_1-2GZ_complexSelectors-big__p20 {
        position: relative
    }
}
.complexSelectors-red_1-2GZ_complexSelectors-small_1lKd:focus {
    color: purple
}
.complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ_complexSelectors-small_1lKd {
    background-color: red
}
.complexSelectors-themedStyle_3dbtz_complexSelectors-small_1lKd .complexSelectors-red_1-2GZ_complexSelectors-small_1lKd {
    background-color: blue
}
.complexSelectors-themedStyle_3dbtz_complexSelectors-small_1lKd .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ_complexSelectors-small_1lKd {
    background-color: black
}
html .complexSelectors-red_1-2GZ_complexSelectors-small_1lKd {
    position: absolute
}
@media screen and (min-width: 1000px) {
    .complexSelectors-red_1-2GZ_complexSelectors-small_1lKd {
        color: green
    }
    .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ_complexSelectors-small_1lKd {
        color: red
    }
    .complexSelectors-themedStyle_3dbtz_complexSelectors-small_1lKd .complexSelectors-red_1-2GZ_complexSelectors-small_1lKd {
        color: blue
    }
    .complexSelectors-themedStyle_3dbtz_complexSelectors-small_1lKd .complexSelectors-unthemedClassStyle_2t1sd .complexSelectors-red_1-2GZ_complexSelectors-small_1lKd {
        color: black
    }
}
@media screen and (min-width: 1001px) {
    html .complexSelectors-red_1-2GZ_complexSelectors-small_1lKd {
        position: relative
    }
}
"
`;

exports[`Stylesheet Complex selectors - Production mode - should create a deterministic stylesheet 1`] = `
".bZ2kF:focus{color:purple}._2t1sd .bZ2kF{background-color:red}._3dbtz_1lKd .bZ2kF,._3dbtz_p20 .bZ2kF{background-color:#00f}._3dbtz_1lKd ._2t1sd .bZ2kF,._3dbtz_p20 ._2t1sd .bZ2kF{background-color:#000}html .bZ2kF{position:absolute}@media screen and (min-width:300px){.bZ2kF{color:green}._2t1sd .bZ2kF{color:red}._3dbtz_1lKd .bZ2kF,._3dbtz_p20 .bZ2kF{color:#00f}._3dbtz_1lKd ._2t1sd .bZ2kF,._3dbtz_p20 ._2t1sd .bZ2kF{color:#000}}@media screen and (min-width:700px){html .bZ2kF{position:relative}}
._1-2GZ_p20:focus{color:purple}._2t1sd ._1-2GZ_p20{background-color:red}._3dbtz_p20 ._1-2GZ_p20{background-color:#00f}._3dbtz_p20 ._2t1sd ._1-2GZ_p20{background-color:#000}html ._1-2GZ_p20{position:absolute}@media screen and (min-width:700px){._1-2GZ_p20{color:green}._2t1sd ._1-2GZ_p20{color:red}._3dbtz_p20 ._1-2GZ_p20{color:#00f}._3dbtz_p20 ._2t1sd ._1-2GZ_p20{color:#000}}@media screen and (min-width:701px){html ._1-2GZ_p20{position:relative}}
._1-2GZ_1lKd:focus{color:purple}._2t1sd ._1-2GZ_1lKd{background-color:red}._3dbtz_1lKd ._1-2GZ_1lKd{background-color:#00f}._3dbtz_1lKd ._2t1sd ._1-2GZ_1lKd{background-color:#000}html ._1-2GZ_1lKd{position:absolute}@media screen and (min-width:1000px){._1-2GZ_1lKd{color:green}._2t1sd ._1-2GZ_1lKd{color:red}._3dbtz_1lKd ._1-2GZ_1lKd{color:#00f}._3dbtz_1lKd ._2t1sd ._1-2GZ_1lKd{color:#000}}@media screen and (min-width:1001px){html ._1-2GZ_1lKd{position:relative}}
"
`;

exports[`Stylesheet Complex selectors - Theme function ident - should create a deterministic stylesheet 1`] = `
".bZ2kF:focus {
    color: purple
}
._2t1sd .bZ2kF {
    background-color: red
}
._3dbtz_big_theme__p .bZ2kF, ._3dbtz_small_theme_1l .bZ2kF {
    background-color: blue
}
._3dbtz_big_theme__p ._2t1sd .bZ2kF, ._3dbtz_small_theme_1l ._2t1sd .bZ2kF {
    background-color: black
}
html .bZ2kF {
    position: absolute
}
@media screen and (min-width: 300px) {
    .bZ2kF {
        color: green
    }
    ._2t1sd .bZ2kF {
        color: red
    }
    ._3dbtz_big_theme__p .bZ2kF, ._3dbtz_small_theme_1l .bZ2kF {
        color: blue
    }
    ._3dbtz_big_theme__p ._2t1sd .bZ2kF, ._3dbtz_small_theme_1l ._2t1sd .bZ2kF {
        color: black
    }
}
@media screen and (min-width: 700px) {
    html .bZ2kF {
        position: relative
    }
}
._1-2GZ_big_theme__p:focus {
    color: purple
}
._2t1sd ._1-2GZ_big_theme__p {
    background-color: red
}
._3dbtz_big_theme__p ._1-2GZ_big_theme__p {
    background-color: blue
}
._3dbtz_big_theme__p ._2t1sd ._1-2GZ_big_theme__p {
    background-color: black
}
html ._1-2GZ_big_theme__p {
    position: absolute
}
@media screen and (min-width: 700px) {
    ._1-2GZ_big_theme__p {
        color: green
    }
    ._2t1sd ._1-2GZ_big_theme__p {
        color: red
    }
    ._3dbtz_big_theme__p ._1-2GZ_big_theme__p {
        color: blue
    }
    ._3dbtz_big_theme__p ._2t1sd ._1-2GZ_big_theme__p {
        color: black
    }
}
@media screen and (min-width: 701px) {
    html ._1-2GZ_big_theme__p {
        position: relative
    }
}
._1-2GZ_small_theme_1l:focus {
    color: purple
}
._2t1sd ._1-2GZ_small_theme_1l {
    background-color: red
}
._3dbtz_small_theme_1l ._1-2GZ_small_theme_1l {
    background-color: blue
}
._3dbtz_small_theme_1l ._2t1sd ._1-2GZ_small_theme_1l {
    background-color: black
}
html ._1-2GZ_small_theme_1l {
    position: absolute
}
@media screen and (min-width: 1000px) {
    ._1-2GZ_small_theme_1l {
        color: green
    }
    ._2t1sd ._1-2GZ_small_theme_1l {
        color: red
    }
    ._3dbtz_small_theme_1l ._1-2GZ_small_theme_1l {
        color: blue
    }
    ._3dbtz_small_theme_1l ._2t1sd ._1-2GZ_small_theme_1l {
        color: black
    }
}
@media screen and (min-width: 1001px) {
    html ._1-2GZ_small_theme_1l {
        position: relative
    }
}
"
`;

exports[`Stylesheet Multi file - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"._3jirG {
    color: blue
}
"
`;

exports[`Stylesheet Multi file - Custom idents - should create a deterministic stylesheet 1`] = `
".multi-multiStyles_3jirG {
    color: blue
}
"
`;

exports[`Stylesheet Multi file - Development mode - should create a deterministic stylesheet 1`] = `
".multi-multiStyles_3jirG {
    color: blue
}
"
`;

exports[`Stylesheet Multi file - Production mode - should create a deterministic stylesheet 1`] = `
"._3jirG{color:#00f}
"
`;

exports[`Stylesheet Multi file - Theme function ident - should create a deterministic stylesheet 1`] = `
"._3jirG {
    color: blue
}
"
`;

exports[`Stylesheet Simple - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"html, body {
    background-color: pink
}
._3_dn5 {
    height: 100px;
    width: 100px;
    color: blue;
    display: -webkit-flex;
    display: flex
}
._3_dn5:hover {
    background-color: purple
}
._1WwEN {
    color: red
}
body ._1WwEN {
    z-index: 2
}
html ._3_dn5 {
    position: absolute
}
@media screen and (min-width: 700px) {
    ._1WwEN {
        color: green
    }
}
"
`;

exports[`Stylesheet Simple - Custom idents - should create a deterministic stylesheet 1`] = `
"html, body {
    background-color: pink
}
.simple-mainStyles_blue_3_dn5 {
    height: 100px;
    width: 100px;
    color: blue;
    display: flex
}
.simple-mainStyles_blue_3_dn5:hover {
    background-color: purple
}
.simple-mainStyles_red_1WwEN {
    color: red
}
body .simple-mainStyles_red_1WwEN {
    z-index: 2
}
html .simple-mainStyles_blue_3_dn5 {
    position: absolute
}
@media screen and (min-width: 700px) {
    .simple-mainStyles_red_1WwEN {
        color: green
    }
}
"
`;

exports[`Stylesheet Simple - Development mode - should create a deterministic stylesheet 1`] = `
"html, body {
    background-color: pink
}
.simple-mainStyles_blue_3_dn5 {
    height: 100px;
    width: 100px;
    color: blue;
    display: flex
}
.simple-mainStyles_blue_3_dn5:hover {
    background-color: purple
}
.simple-mainStyles_red_1WwEN {
    color: red
}
body .simple-mainStyles_red_1WwEN {
    z-index: 2
}
html .simple-mainStyles_blue_3_dn5 {
    position: absolute
}
@media screen and (min-width: 700px) {
    .simple-mainStyles_red_1WwEN {
        color: green
    }
}
"
`;

exports[`Stylesheet Simple - Production mode - should create a deterministic stylesheet 1`] = `
"body,html{background-color:pink}._3_dn5{height:100px;width:100px;color:#00f;display:flex}._3_dn5:hover{background-color:purple}._1WwEN{color:red}body ._1WwEN{z-index:2}html ._3_dn5{position:absolute}@media screen and (min-width:700px){._1WwEN{color:green}}
"
`;

exports[`Stylesheet Simple - Theme function ident - should create a deterministic stylesheet 1`] = `
"html, body {
    background-color: pink
}
._3_dn5 {
    height: 100px;
    width: 100px;
    color: blue;
    display: flex
}
._3_dn5:hover {
    background-color: purple
}
._1WwEN {
    color: red
}
body ._1WwEN {
    z-index: 2
}
html ._3_dn5 {
    position: absolute
}
@media screen and (min-width: 700px) {
    ._1WwEN {
        color: green
    }
}
"
`;

exports[`Stylesheet Themed - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
".H4Gfx {
    z-index: 1;
    display: -webkit-flex;
    display: flex
}
._3EiJS {
    z-index: 2
}
._2J3Fc {
    z-index: 3
}
._3vi0Y_2ywy {
    background-color: yellow
}
._1qrIM_2ywy {
    height: 12px
}
.yEYY9_2ywy {
    line-height: 6
}
._1ecu3_2ywy {
    border-bottom-width: 6px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._3fD_0_2ywy {
    border-bottom-width: 12px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._1ezv1_2ywy {
    color: yellow
}
._3vi0Y_1c8Y {
    background-color: red
}
._1qrIM_1c8Y {
    height: 8px
}
.yEYY9_1c8Y {
    line-height: 4
}
._1ecu3_1c8Y {
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._3fD_0_1c8Y {
    border-bottom-width: 8px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._1ezv1_1c8Y {
    color: red
}
"
`;

exports[`Stylesheet Themed - Custom idents - should create a deterministic stylesheet 1`] = `
".stylesOne-regularStyle_H4Gfx {
    z-index: 1;
    display: flex
}
.stylesTwo-regularStyle_3EiJS {
    z-index: 2
}
.stylesThree-regularStyle_2J3Fc {
    z-index: 3
}
.stylesOne-themeStyle_3vi0Y-themeOne_2y {
    background-color: yellow
}
.stylesTwo-themeStyle_1qrIM-themeOne_2y {
    height: 12px
}
.stylesThree-themeStyle_yEYY9-themeOne_2y {
    line-height: 6
}
.stylesThree-styleNode_1ecu3-themeOne_2y {
    border-bottom-width: 6px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_3fD_0-themeOne_2y {
    border-bottom-width: 12px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_1ezv1-themeOne_2y {
    color: yellow
}
.stylesOne-themeStyle_3vi0Y-themeTwo_1c {
    background-color: red
}
.stylesTwo-themeStyle_1qrIM-themeTwo_1c {
    height: 8px
}
.stylesThree-themeStyle_yEYY9-themeTwo_1c {
    line-height: 4
}
.stylesThree-styleNode_1ecu3-themeTwo_1c {
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_3fD_0-themeTwo_1c {
    border-bottom-width: 8px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_1ezv1-themeTwo_1c {
    color: red
}
"
`;

exports[`Stylesheet Themed - Development mode - should create a deterministic stylesheet 1`] = `
".stylesOne-regularStyle_H4Gfx {
    z-index: 1;
    display: flex
}
.stylesTwo-regularStyle_3EiJS {
    z-index: 2
}
.stylesThree-regularStyle_2J3Fc {
    z-index: 3
}
.stylesOne-themeStyle_3vi0Y_themeOne-themeOne_2ywy {
    background-color: yellow
}
.stylesTwo-themeStyle_1qrIM_themeOne-themeOne_2ywy {
    height: 12px
}
.stylesThree-themeStyle_yEYY9_themeOne-themeOne_2ywy {
    line-height: 6
}
.stylesThree-styleNode_1ecu3_themeOne-themeOne_2ywy {
    border-bottom-width: 6px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_3fD_0_themeOne-themeOne_2ywy {
    border-bottom-width: 12px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_1ezv1_themeOne-themeOne_2ywy {
    color: yellow
}
.stylesOne-themeStyle_3vi0Y_themeTwo-themeTwo_1c8Y {
    background-color: red
}
.stylesTwo-themeStyle_1qrIM_themeTwo-themeTwo_1c8Y {
    height: 8px
}
.stylesThree-themeStyle_yEYY9_themeTwo-themeTwo_1c8Y {
    line-height: 4
}
.stylesThree-styleNode_1ecu3_themeTwo-themeTwo_1c8Y {
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_3fD_0_themeTwo-themeTwo_1c8Y {
    border-bottom-width: 8px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_1ezv1_themeTwo-themeTwo_1c8Y {
    color: red
}
"
`;

exports[`Stylesheet Themed - Production mode - should create a deterministic stylesheet 1`] = `
".H4Gfx{z-index:1;display:flex}
._3EiJS{z-index:2}
._2J3Fc{z-index:3}
._3vi0Y_2ywy{background-color:#ff0}
._1qrIM_2ywy{height:12px}
.yEYY9_2ywy{line-height:6}._1ecu3_2ywy{border-bottom:6px solid pink}._3fD_0_2ywy{border-bottom:12px solid pink}._1ezv1_2ywy{color:#ff0}
._3vi0Y_1c8Y{background-color:red}
._1qrIM_1c8Y{height:8px}
.yEYY9_1c8Y{line-height:4}._1ecu3_1c8Y{border-bottom:4px solid pink}._3fD_0_1c8Y{border-bottom:8px solid pink}._1ezv1_1c8Y{color:red}
"
`;

exports[`Stylesheet Themed - Theme function ident - should create a deterministic stylesheet 1`] = `
".H4Gfx {
    z-index: 1;
    display: flex
}
._3EiJS {
    z-index: 2
}
._2J3Fc {
    z-index: 3
}
._3vi0Y_theme_one_2y {
    background-color: yellow
}
._1qrIM_theme_one_2y {
    height: 12px
}
.yEYY9_theme_one_2y {
    line-height: 6
}
._1ecu3_theme_one_2y {
    border-bottom-width: 6px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._3fD_0_theme_one_2y {
    border-bottom-width: 12px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._1ezv1_theme_one_2y {
    color: yellow
}
._3vi0Y_theme_two_1c {
    background-color: red
}
._1qrIM_theme_two_1c {
    height: 8px
}
.yEYY9_theme_two_1c {
    line-height: 4
}
._1ecu3_theme_two_1c {
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._3fD_0_theme_two_1c {
    border-bottom-width: 8px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._1ezv1_theme_two_1c {
    color: red
}
"
`;

exports[`Stylesheet Unused modules - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"._1tscQ {
    height: 100px;
    width: 100px
}
._2dq_B_1KLs {
    top: 100px;
    bottom: 100px
}
"
`;

exports[`Stylesheet Unused modules - Custom idents - should create a deterministic stylesheet 1`] = `
".used-used_1tscQ {
    height: 100px;
    width: 100px
}
.usedThemeStyle-usedThemeStyle_2dq_B-theme_1K {
    top: 100px;
    bottom: 100px
}
"
`;

exports[`Stylesheet Unused modules - Development mode - should create a deterministic stylesheet 1`] = `
".unused-unused_2i3yF {
    color: red;
    background-color: blue
}
.used-used_1tscQ {
    height: 100px;
    width: 100px
}
.usedThemeStyle-usedThemeStyle_2dq_B_theme-theme_1KLs {
    top: 100px;
    bottom: 100px
}
.usedThemeStyle-usedThemeStyle_2dq_B_unusedTheme-unusedTheme_1oZa {
    top: 100px;
    bottom: 100px
}
"
`;

exports[`Stylesheet Unused modules - Production mode - should create a deterministic stylesheet 1`] = `
"._1tscQ{height:100px;width:100px}
._2dq_B_1KLs{top:100px;bottom:100px}
"
`;

exports[`Stylesheet Unused modules - Theme function ident - should create a deterministic stylesheet 1`] = `
"._1tscQ {
    height: 100px;
    width: 100px
}
._2dq_B_empty-theme_1K {
    top: 100px;
    bottom: 100px
}
"
`;
